feature: update imagers